tests/outref/TSIT01.ref
OCTO> SELECT *
OCTO> FROM names n1
OCTO> CROSS JOIN (SELECT *
OCTO>             FROM names n2
OCTO>             WHERE n1.id = n2.id
OCTO>            );
[ERROR] PATH:LINENUM DATE TIME : Unknown column: N1.ID
Error with syntax near (line 5, column 19):

SELECT *
FROM names n1
CROSS JOIN (SELECT *
            FROM names n2
            WHERE n1.id = n2.id
                  ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT *
FROM names n1
CROSS JOIN (SELECT *
            FROM names n2
            WHERE n1.id = n2.id
           );

OCTO> 
